--- a/paladium-xray/paladium-xray.vcxproj
+++ b/paladium-xray/paladium-xray.vcxproj
@@ -115,6 +115,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <LanguageStandard>Default</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>C:\Program Files\Java\jdk1.8.0_202\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -146,33 +147,18 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="gl_utils.cpp" />
     <ClCompile Include="hook.cpp" />
-    <ClCompile Include="imgui\imgui.cpp" />
-    <ClCompile Include="imgui\imgui_demo.cpp" />
-    <ClCompile Include="imgui\imgui_draw.cpp" />
-    <ClCompile Include="imgui\imgui_impl_opengl2.cpp" />
-    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="imgui\imgui_tables.cpp" />
-    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="j_classloader.cpp" />
     <ClCompile Include="utils.cpp" />
-    <ClCompile Include="xray.cpp" />
+    <ClCompile Include="IlIllllIIIlIlIlIlIlIlIlIlIlII.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="blocks.hpp" />
+    <ClInclude Include="class_loader.hpp" />
     <ClInclude Include="gl_utils.hpp" />
     <ClInclude Include="hook.hpp" />
-    <ClInclude Include="imgui\imconfig.h" />
-    <ClInclude Include="imgui\imgui.h" />
-    <ClInclude Include="imgui\imgui_impl_opengl2.h" />
-    <ClInclude Include="imgui\imgui_impl_win32.h" />
-    <ClInclude Include="imgui\imgui_internal.h" />
-    <ClInclude Include="imgui\imstb_rectpack.h" />
-    <ClInclude Include="imgui\imstb_textedit.h" />
-    <ClInclude Include="imgui\imstb_truetype.h" />
-    <ClInclude Include="imtheme.h" />
     <ClInclude Include="j_classloader.hpp" />
     <ClInclude Include="utils.hpp" />
-    <ClInclude Include="xray.hpp" />
+    <ClInclude Include="IlIllllIIIlIlIlIlIlIlIlIlIlII.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
