--- a/paladium-xray/paladium-xray.vcxproj
+++ b/paladium-xray/paladium-xray.vcxproj
@@ -143,6 +143,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_opengl2.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="blocks.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="gl_utils.cpp" />
@@ -152,6 +159,15 @@
     <ClCompile Include="IlIllllIIIlIlIlIlIlIlIlIlIlII.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_opengl2.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="imtheme.h" />
     <ClInclude Include="blocks.hpp" />
     <ClInclude Include="class_loader.hpp" />
     <ClInclude Include="gl_utils.hpp" />
